# Rust-RealTimeChatApp

./: .env  .gitignore  Cargo.toml  Dockerfile
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: api.rs  auth.rs  chat.rs  create.rs  mod.rs  user.rs
backend/src/server/: mod.rs
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/Components/: UserIcon.tsx
frontend/src/context/: AuthContext.tsx  AuthContextProvider.tsx  useAuth.ts  useLogout.ts
frontend/src/pages/: Auth.tsx  Chat.tsx  Friends.tsx  Home.tsx
src/: main.rs
src/db/: mod.rs
src/middleware/: mod.rs
src/models/: mod.rs
src/routes/: api.rs  auth.rs  chat.rs  group.rs  mod.rs  user.rs
src/server/: mod.rs
src/thread_pool/: mod.rs
src/utils/: mod.rs
