[package]
name = "rust-glooo-project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros","ws"] }
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
mongodb = "3.2.5"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
