[package]
name = "rust-glooo-project"
version = "0.1.0"
edition = "2021"

exclude = [
    "thread_pool/",
]

[dependencies]
axum = { version = "0.8.4", features = ["macros","ws"] }
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.28"
chrono = "0.4"
bson = { version = "2.9", features = ["chrono-0_4"] }
mongodb = "3.2.5"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
dotenv = "0.15.0"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls", "ring", "rustls-native-certs","builder"] }
rand = "0.8"
env_logger = "0.11.8"
tower-http = {version = "0.6", features = ["cors"]}
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
cookie = "0.18"